[package]
name = "dis-spawner"
version = "0.2.0"
edition = "2021"

[dependencies]
acme2 = "0.5.1"
anyhow = "1.0.57"
async-nats = "0.15.0"
async-stream = "0.3.3"
bollard = "0.13.0"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.2", features = ["derive"] }
dashmap = "5.3.4"
futures = "0.3.21"
http = "0.2.7"
hyper = { version = "0.14.19", features = ["server", "client", "http1", "http2", "tcp"] }
notify = "5.0.0-pre.15"
openssl = "0.10.40"
reqwest = "0.11.10"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
signal-hook = "0.3.14"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "offline"] }
tokio = { version = "1.18.2", features = ["full"] }
tokio-rustls = "0.23.4"
tokio-stream = "0.1.8"
tracing = "0.1.34"
#tracing-stackdriver = { git = "https://github.com/drifting-in-space/tracing-stackdriver" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
url = "2.2.2"
serde_with = "1.14.0"
tracing-stackdriver = "0.4.1"

[[bin]]
name = "spawner-drone"
required-features = ["full"]

[features]
default = ["full"]
full = []
