[package]
name = "plane-cli"
version = "0.3.24"
edition = "2021"
authors = ["Paul Butler <paul@driftingin.space>"]
homepage = "https://plane.dev"
description = "Session backend orchestrator for ambitious browser-based apps."
repository = "https://github.com/drifting-in-space/plane"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.65"
async-nats = { git = "https://github.com/nats-io/nats.rs.git", rev = "261ead4" }
chrono = "0.4.26"
clap = { version = "4.0.4", features = ["derive"] }
colored = "2.0.0"
plane-core = {path = "../core", version="0.3.0"}
time = { version = "0.3.20", features = ["macros"] }
tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
