[package]
name = "plane-controller"
version = "0.3.24"
edition = "2021"
authors = ["Paul Butler <paul@driftingin.space>"]
homepage = "https://plane.dev"
description = "Session backend orchestrator for ambitious browser-based apps."
repository = "https://github.com/drifting-in-space/plane"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.64"
async-trait = "0.1.57"
chrono = { version="0.4.22", default_features = false }
clap = { version = "4.0.4", features = ["derive"] }
plane-core = {path = "../core", version="0.3.5"}
futures = "0.3.24"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["macros", "rt", "signal"] }
tokio-stream = "0.1.9"
tracing = "0.1.36"
trust-dns-server = "0.22.0"
serde_json = "1.0.95"
axum = { version = "0.6.20", features = ["headers"] }
tower-http = { version = "0.4.3", features = ["cors"] }
async-stream = "0.3.5"

[[bin]]
name = "plane-controller"
path = "src/main.rs"
