[package]
name = "plane-core"
version = "0.3.3"
edition = "2021"
authors = ["Paul Butler <paul@driftingin.space>"]
homepage = "https://plane.dev"
description = "Session backend orchestrator for ambitious browser-based apps."
repository = "https://github.com/drifting-in-space/plane"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.61"
async-nats = "0.22.0"
bollard = {version = "0.13.0", optional=true, git="https://github.com/drifting-in-space/bollard.git", branch = "paulgb/update-serde-with-version"}
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.15", features = ["derive"] }
config = { version = "0.13.2", default_features = false, features = ["toml"] }
dashmap = "5.4.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_with = "2.0.0"
tokio = "1.20.1"
tokio-stream = "0.1.9"
tracing = "0.1.36"
tracing-stackdriver = "0.5.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.2.2"
uuid = { version = "1.1.2", features = ["v4"] }

[features]
bollard = ["dep:bollard"]
