[package]
name = "plane-core"
version = "0.3.24"
edition = "2021"
authors = ["Paul Butler <paul@driftingin.space>"]
homepage = "https://plane.dev"
description = "Session backend orchestrator for ambitious browser-based apps."
repository = "https://github.com/drifting-in-space/plane"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.61"
async-nats = { git = "https://github.com/nats-io/nats.rs.git", rev = "261ead4" }
bollard = {version = "0.14.0", optional=true}
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde", "clock"], default_features=false }
clap = { version = "4.0.15", features = ["derive"] }
config = { version = "0.13.2", default_features = false, features = ["toml"] }
rand = "0.8.5"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_with = "3.0.0"
time = "0.3.17"
tokio = { version = "1.20.1", features = ["signal", "sync"] }
tokio-stream = "0.1.9"
tracing = "0.1.36"
tracing-stackdriver = "0.7.0"
plane-core-nats-macros = { path = "./nats-macros" }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = "2.2.2"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[features]
bollard = ["dep:bollard"]
