[package]
name = "plane-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
async-nats = "0.19.0"
bollard = "0.13.0"
chrono = "0.4.22"
plane-core = {path = "../core"}
plane-drone = {path = "../drone"}
plane-controller = {path = "../controller"}
futures = "0.3.24"
http = "0.2.8"
hyper = "0.14.20"
integration-test = { path = "./integration-test" }
openssl = "0.10.41"
rand = "0.8.5"
rcgen = "0.9.3"
reqwest = { version = "0.11.11", features=["native-tls"] }
rustls-pemfile = "1.0.1"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["macros"] }
tokio-stream = "0.1.9"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "ansi"] }
tokio-rustls = "0.23.4"
tokio-tungstenite = "0.17.2"
url = "2.0.0"
