[package]
name = "plane-dev"
version = "0.3.24"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.62"
async-nats = { git = "https://github.com/nats-io/nats.rs.git", rev = "261ead4" }
bollard = "0.14.0"
chrono = { version="0.4.22", default-features = false }
plane-core = {path = "../core"}
plane-drone = {path = "../drone"}
plane-controller = {path = "../controller"}
futures = "0.3.24"
http = "0.2.8"
hyper = "0.14.20"
integration-test = { path = "./integration-test" }
openssl = "0.10.41"
rand = "0.8.5"
rcgen = "0.11.0"
reqwest = { version = "0.11.11", features=["native-tls", "cookies"] }
rustls-pemfile = "1.0.1"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["macros", "process"] }
tokio-stream = "0.1.9"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "ansi"] }
tokio-rustls = "0.24.0"
tokio-tungstenite = "0.19.0"
url = "2.0.0"
trust-dns-resolver = "0.22.0"
trust-dns-server = "0.22.0"
time = "0.3.23"
