[package]
name = "plane-drone"
version = "0.2.0"
edition = "2021"

[dependencies]
acme2-eab = "0.5.1"
anyhow = "1.0.57"
base64 = "0.13.0"
bollard = "0.13.0"
chrono = { version = "0.4.21", features = ["serde"] }
clap = { version = "4.0.4", features = ["derive"] }
config = { version = "0.13.2", default_features = false, features = ["toml"] }
dashmap = "5.3.4"
plane-core = {path = "../core"}
futures = "0.3.24"
http = "0.2.7"
hyper = { version = "0.14.19", features = ["server", "client", "http1", "http2", "tcp"] }
notify = "5.0.0"
openssl = "0.10.40"
reqwest = { version = "0.11.11", features = ["native-tls"] }
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.81"
signal-hook = "0.3.14"
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "macros",
    "offline",
] }
tokio = { version = "1.18.2", features = ["rt"] }
tokio-rustls = "0.23.4"
tokio-stream = "0.1.8"
tracing = "0.1.36"

[[bin]]
name = "plane-drone"
path = "src/main.rs"
