[package]
name = "plane-dynamic-proxy"
version = "0.5.1"
edition = "2021"
description = "Dynamic proxy crate for Plane"
repository = "https://github.com/jamsocket/plane"
license = "MIT"
homepage = "https://plane.dev"
readme = "README.md"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = { version = "0.1.8", features = ["http1", "http2", "server", "server-graceful", "server-auto", "client", "client-legacy"] }
pin-project-lite = "0.2.14"
rustls = { version = "0.23.13", features = ["ring"] }
thiserror = "1.0.63"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"
tower-service = "0.3.3"
futures-util = "0.3.30"

[dev-dependencies]
axum = { version = "0.7.6", features = ["http2", "ws"] }
futures-util = "0.3.30"
http = "1.1.0"
rcgen = "0.13.1"
reqwest = { version = "0.12.7", features = ["http2", "stream"] }
serde_json = "1.0.128"
tokio-tungstenite = "0.24.0"
