[package]
name = "plane-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
getopts = "0.2.21"
nats = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
sysinfo = "0.25.1"
