[package]
name = "plane-metrics"
version = "0.3.24"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = { git = "https://github.com/nats-io/nats.rs.git", rev = "261ead4" }
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
sysinfo = "0.29.2"
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
