[package]
name = "spawner-sidecar"
description = "Monitors TCP connections on a port and provides them over a HTTP/JSON API."
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.4.3"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread", "time"] }
clap = { version = "3.0.0", features = ["derive"] }
