[package]
name = "spawner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.8", features = ["derive"] }
futures = "0.3.19"
k8s-openapi = { version = "0.13.1", features = ["schemars", "v1_22"] }
kube = { version = "0.66.0", features = ["runtime"] }
serde = { version = "1.0.133", features = ["derive"] }
spawner-resource = {path = "../resource"}
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
