[package]
name = "gen-schema-map"
version = "0.1.0"
authors = ["Abhishek Cherath <abhi@driftingin.space>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plane-core = {path = "..", version="0.3.5"}
serde = { version = "1.0.144", features = ["derive"] }