[package]
name = "plane-core-nats-macros"
version = "0.3.24"
edition = "2021"
authors = ["Abhishek Cherath <abhi@driftingin.space>", "Paul Butler <paul@driftingin.space>"]
homepage = "https://plane.dev"
description = "Session backend orchestrator for ambitious browser-based apps."
repository = "https://github.com/drifting-in-space/plane"
license = "MIT"
readme = "README.md"

[dependencies]
darling = "0.20.1"
proc-macro2 = "1.0.59"
quote = "1.0.27"
syn = "2.0.16"

[lib]
proc-macro = true
