[package]
name = "spawner-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
axum = { version = "0.4.5", features=["json"] }
clap = { version = "3.0.14", features = ["derive"] }
futures = "0.3.19"
k8s-openapi = { version = "0.14.0", features = ["schemars", "v1_23"] }
kube = { version = "0.68.0", features = ["runtime", "derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
spawner-resource = {path = "../resource"}
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.8"
tower-http = "0.2.1"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.7", features = ["env-filter", "json"] }
