[package]
name = "dis-spawner-api"
version = "0.1.9"
edition = "2021"
homepage = "https://spawner.dev"
description = "HTTP API for Spawner, a server for session-lived backends."
repository = "https://github.com/drifting-in-space/spawner"
license = "MIT"
readme = "README.md"

[[bin]]
name = "spawner-api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
axum = "0.4.5"
clap = { version = "3.1.0", features = ["derive"] }
futures = "0.3.19"
k8s-openapi = { version = "0.14.0", features = ["schemars", "v1_23"] }
kube = { version = "0.69.1", features = ["runtime"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.8.23"
dis-spawner = "0.1.9"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
tower-http = "0.2.1"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
