[package]
name = "dis-spawner-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spawner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
bat = "0.20.0"
clap = { version = "3.0.14", features = ["derive"] }
futures = "0.3.19"
k8s-openapi = { version = "0.14.0", features = ["schemars", "v1_23"] }
kube = { version = "0.69.1", features = ["runtime"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
dis-spawner = "0.1.0"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }