[package]
name = "dis-spawner"
version = "0.1.9"
edition = "2021"
homepage = "https://spawner.dev"
description = "Session-lived containers for advanced browser-based applications."
repository = "https://github.com/drifting-in-space/spawner"
license = "MIT"
readme = "README.md"

[dependencies]
k8s-openapi = { version = "0.14.0", features = ["schemars", "v1_23"] }
kube = { version = "0.69.1", features = ["derive", "runtime"] }
schemars = "0.8.8"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
tracing = "0.1.30"
tokio-stream = "0.1.8"
futures = "0.3.19"
axum = "0.4.5"
