[package]
name = "spawner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
chrono = { version = "0.4.19", features = ["clock"] }
clap = { version = "3.0.13", features = ["derive"] }
futures = "0.3.19"
k8s-openapi = { version = "0.14.0", features = ["schemars", "v1_23"] }
kube = { version = "0.67.0", features = ["runtime"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
spawner-resource = {path = "../resource"}
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
