[package]
name = "dis-spawner-tracing"
version = "0.1.1"
edition = "2021"
homepage = "https://spawner.dev"
description = "Tracing utilities for Spawner, a server for session-lived backends."
repository = "https://github.com/drifting-in-space/spawner"
license = "MIT"
readme = "README.md"

[dependencies]
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["env-filter", "json", "time"] }
tokio = { version = "1.16.1" }
hyper = { version = "0.14.17", features = ["full"] }
tracing-stackdriver = "0.3.0"
hyper-tls = "0.5.0"
serde = "1.0.136"
serde_json = "1.0.79"
